--- a/templates/commentaire.html
+++ b/templates/commentaire.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="/static/style3.css">
+    <link rel="stylesheet" href="/static/style2.css">
     <title>Talent Hub</title>
 </head>
 
@@ -137,11 +137,13 @@
                                     <input type="hidden" name="postId" value={{.PostId}}>
                                     <div class="reaction-buttons">
                                         <button class="btns" type="submit" name="reaction" value="1">
-                                            <i class="material-icons-outlined {{if eq .Post.Score 1}}active{{end}}" id="like{{.PostId}}">thumb_up</i>
+                                            <i class="material-icons-outlined {{if eq .Post.Score 1}}active{{end}}"
+                                                id="like{{.PostId}}">thumb_up</i>
                                             <span id="like-{{.PostId}}">{{.Post.Like}}</span>
                                         </button>
                                         <button class="btns" type="submit" name="reaction" value="-1">
-                                            <i class="material-icons-outlined {{if eq .Post.Score -1}}active{{end}}" id="dislike{{.PostId}}">thumb_down</i>
+                                            <i class="material-icons-outlined {{if eq .Post.Score -1}}active{{end}}"
+                                                id="dislike{{.PostId}}">thumb_down</i>
                                             <span id="dislike-{{.PostId}}">{{.Post.Dislike}}</span>
                                         </button>
                                     </div>
@@ -158,7 +160,7 @@
                 <script>
                     const formElement = document.querySelectorAll('.form');
                     let ButtonValue;
-        
+
                     // Ajouter l'événement de clic sur tous les formulaires
                     formElement.forEach(FormEll => {
                         FormEll.addEventListener('click', event => {
@@ -167,11 +169,11 @@
                                 console.log(ButtonValue)
                             }
                         });
-        
+
                         // Ajouter l'événement de soumission pour chaque formulaire
                         FormEll.addEventListener('submit', event => {
                             event.preventDefault()
-        
+
                             const data = {
                                 postId: FormEll.querySelector('[name="postId"]').value,
                                 reaction: ButtonValue
@@ -190,20 +192,20 @@
                                     }
                                     const likeElement = document.getElementById(`like-${data.postId}`)
                                     likeElement.textContent = data.like
-        
+
                                     const dislikeElement = document.getElementById(`dislike-${data.postId}`);
                                     dislikeElement.textContent = data.dislike
                                     const likecolor = document.getElementById(`like${data.postId}`);
                                     const dislikecolor = document.getElementById(`dislike${data.postId}`);
                                     if (data.score == 1) {
-                                        likecolor.classList.add('active'); 
+                                        likecolor.classList.add('active');
                                         dislikecolor.classList.remove('active');
-                                        
-                                    }else  if (data.score == -1 ) {
-                                        likecolor.classList.remove('active'); 
+
+                                    } else if (data.score == -1) {
+                                        likecolor.classList.remove('active');
                                         dislikecolor.classList.add('active');
                                     } else {
-                                        likecolor.classList.remove('active'); 
+                                        likecolor.classList.remove('active');
                                         dislikecolor.classList.remove('active');
                                     }
                                 })
@@ -211,51 +213,55 @@
                         });
                     })
                 </script>
-    <h1>Commentaires</h1>
-    <form method="POST" action="/commentaires">
-        <label for="content">Votre commentaire :</label><br>
-        <input type="hidden" name="postId" value={{.PostId}}>
-        <textarea id="content" name="content" placeholder="Votre commentaire..." required></textarea><br>
-        <button type="submit" class="choosed">Commenter</button>
-    </form>
-    {{range .Comments}}
-    <div class="feed-tweet">
-        <img src="/static/profile.png" alt="" class="tweet-img">
-        <div class="feed-tweet-detail">
-            <div class="tweet-details">
-                <div class="tweet-user-info">
-                    <a href="" class="tweeter-name">{{.Username}}
-                        <span class="tweeter-handle">@{{.Username}} .{{.Creation}}</span>
-                    </a>
-                </div>
-                <div class="tweet-actions">
-                    <i class="material-icons-outlined" id="horiz">more_horiz</i>
-                </div>
-            </div>
-            <div class="tweet-text">
-                <p>{{.Content}}</p>
-            </div>
-            <div class="tweet-icons">
-                <div class="reaction">
-                    <form method="POST" action="/commentaires" class="form">
-                        <input type="hidden" name="commentId" value={{.Id}}>
-                        <div class="reaction-buttons">
-                            <button class="btns" type="submit" name="reaction" value="1">
-                                <i class="material-icons-outlined {{if eq .Score 1}}active{{end}}" id="likecomment{{.Id}}">thumb_up</i>
-                                <span id="likecomment-{{.Id}}">{{.Like}}</span>
-                            </button>
-                            <button class="btns" type="submit" name="reaction" value="-1">
-                                <i class="material-icons-outlined{{if eq .Score -1}}active{{end}}"id="dislikecomment{{.Id}}">thumb_down</i>
-                                <span id="dislikecomment-{{.Id}}">{{.Dislike}}</span>
-                            </button>
+
+                {{range .Comments}}
+                <div class="feed-tweet">
+                    <img src="/static/profile.png" alt="" class="tweet-img">
+                    <div class="feed-tweet-detail">
+                        <div class="tweet-details">
+                            <div class="tweet-user-info">
+                                <a href="" class="tweeter-name">{{.Username}}
+                                    <span class="tweeter-handle">@{{.Username}} .{{.Creation}}</span>
+                                </a>
+                            </div>
+                            <div class="tweet-actions">
+                                <i class="material-icons-outlined" id="horiz">more_horiz</i>
+                            </div>
                         </div>
-                    </form>
+                        <div class="tweet-text">
+                            <p>{{.Content}}</p>
+                        </div>
+                        <div class="tweet-icons">
+                            <div class="reaction">
+                                <form method="POST" action="/commentaires" class="form">
+                                    <input type="hidden" name="commentId" value={{.Id}}>
+                                    <div class="reaction-buttons">
+                                        <button class="btns" type="submit" name="reaction" value="1">
+                                            <i class="material-icons-outlined {{if eq .Score 1}}active{{end}}"
+                                                id="likecomment{{.Id}}">thumb_up</i>
+                                            <span id="likecomment-{{.Id}}">{{.Like}}</span>
+                                        </button>
+                                        <button class="btns" type="submit" name="reaction" value="-1">
+                                            <i class="material-icons-outlined{{if eq .Score -1}}active{{end}}"
+                                                id="dislikecomment{{.Id}}">thumb_down</i>
+                                            <span id="dislikecomment-{{.Id}}">{{.Dislike}}</span>
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                {{end}}
+                <form method="POST" action="/commentaires" class="comment">
+                    <label for="content">Votre commentaire :</label><br>
+                    <input type="hidden" name="postId" value={{.PostId}}>
+                    <textarea id="content" name="content" placeholder="Votre commentaire..." required></textarea><br>
+                    <button type="submit" class="choosed">Commenter</button>
+                </form>
+
             </div>
-        </div>
-    </div>
-    {{end}}
-  
+    </main>
     <script>
         const formElements = document.querySelectorAll('.form');
         let clickedButtonValue;
@@ -263,54 +269,54 @@
         formElements.forEach(FormEl => {
             FormEl.addEventListener('click', event => {
                 if (event.target.closest('button[type="submit"]')) {
-                            clickedButtonValue = event.target.closest('button[type="submit"]').value;
-                        }
+                    clickedButtonValue = event.target.closest('button[type="submit"]').value;
+                }
             });
             // Ajouter l'événement de soumission pour chaque formulaire
             FormEl.addEventListener('submit', event => {
                 event.preventDefault();
-                
+
                 const data = {
                     commentId: FormEl.querySelector('[name="commentId"]').value,
                     reaction: clickedButtonValue
                 };
-        
+
                 // Envoi des données en JSON au serveur
                 fetch('http://localhost:9090/commentaires', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data)
                 })
-                .then(res => res.json())  // Récupérer la réponse en JSON
-                .then(data => {
-                    console.log(data)
-                    if (data.Error) {
-                                 window.location.href = "/login"
-                                    return
-                                }
-                    const likeElement = document.getElementById(`likecomment-${data.commentId}`);
-                    likeElement.textContent = data.like;
-                 const dislikeElement = document.getElementById(`dislikecomment-${data.commentId}`);
-                    dislikeElement.textContent = data.dislike;
-                                     const likecolor = document.getElementById(`likecomment${data.commentId}`);
-                                    const dislikecolor = document.getElementById(`dislikecomment${data.commentId}`);
-                                    console.log(likecolor)
-                                        if (data.score == 1) {
-                                            likecolor.classList.add('active'); 
-                                            dislikecolor.classList.remove('active');
-                                            
-                                        }else  if (data.score == -1 ) {
-                                            likecolor.classList.remove('active'); 
-                                            dislikecolor.classList.add('active');
-                                        } else {
-                                            likecolor.classList.remove('active'); 
-                                            dislikecolor.classList.remove('active');
-                                        }
-                })  // Afficher la réponse dans la console
-                .catch(err => console.log(err));  // Gérer les erreurs
+                    .then(res => res.json())  // Récupérer la réponse en JSON
+                    .then(data => {
+                        console.log(data)
+                        if (data.Error) {
+                            window.location.href = "/login"
+                            return
+                        }
+                        const likeElement = document.getElementById(`likecomment-${data.commentId}`);
+                        likeElement.textContent = data.like;
+                        const dislikeElement = document.getElementById(`dislikecomment-${data.commentId}`);
+                        dislikeElement.textContent = data.dislike;
+                        const likecolor = document.getElementById(`likecomment${data.commentId}`);
+                        const dislikecolor = document.getElementById(`dislikecomment${data.commentId}`);
+                        console.log(likecolor)
+                        if (data.score == 1) {
+                            likecolor.classList.add('active');
+                            dislikecolor.classList.remove('active');
+
+                        } else if (data.score == -1) {
+                            likecolor.classList.remove('active');
+                            dislikecolor.classList.add('active');
+                        } else {
+                            likecolor.classList.remove('active');
+                            dislikecolor.classList.remove('active');
+                        }
+                    })  // Afficher la réponse dans la console
+                    .catch(err => console.log(err));  // Gérer les erreurs
             });
         });
-        </script>
-         
+    </script>
 </body>
+
 </html>
