--- a/static/style2.css
+++ b/static/style2.css
@@ -44,6 +44,27 @@ nav {
   align-items: center;
 
 }
+.comment {
+
+  background: #000000;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 15px;
+  border: 1px solid #333;
+  width: 100%; 
+}
+
+.comment textarea {
+  width: 100%;
+  background: #1b1b1b;
+  border: 1px solid #333;
+  color: white;
+  padding: 15px;
+  border-radius: 5px;
+  margin: 10px 0;
+  min-height: 100px;
+  resize: vertical;
+}
 
 .Buttona{
   color: white;
@@ -239,15 +260,7 @@ main {
   color: #666;
 }
 
-.btns {
-  background: transparent;
-  border: none;
-  color: #666;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
+
 
 .btns i.active {
   color: #ff9000;
