--- a/templates/commentaire.html
+++ b/templates/commentaire.html
@@ -13,9 +13,7 @@
 
 <body>
     <nav>
-        <a href="/home" class="Logo">
-            <span class="Name">Talent <span>hub</span></span>
-        </a>
+        <a href="/home" class="Logo">Talent <span>hub</span></a>
         <div class="search-box">
             <input type="text" id="srch" placeholder="Search...">
             <div id="search-results"></div>
