--- a/templates/filter1.html
+++ b/templates/filter1.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <a href="/home" class="Logo">
-            <span class="Name">Talent <span>hub</span></span>
+        Talent <span>hub</span>
         </a>
         <div class="search-box">
             <input type="text" id="srch" placeholder="Search...">
@@ -116,19 +116,19 @@
 
 
                             <div class="topic-options">
-                                <input type="radio" id="music" name="topic" value="Music" required>
+                                <input type="checkbox" id="music" name="topic" value="Music" required>
                                 <label for="music">Music</label>
 
-                                <input type="radio" id="sport" name="topic" value="Sport">
+                                <input type="checkbox" id="sport" name="topic" value="Sport">
                                 <label for="sport">Sport</label>
 
-                                <input type="radio" id="gaming" name="topic" value="Gaming">
+                                <input type="checkbox" id="gaming" name="topic" value="Gaming">
                                 <label for="gaming">Gaming</label>
 
-                                <input type="radio" id="health" name="topic" value="Health">
+                                <input type="checkbox" id="health" name="topic" value="Health">
                                 <label for="health">Health</label>
 
-                                <input type="radio" id="general" name="topic" value="General">
+                                <input type="checkbox" id="general" name="topic" value="General">
                                 <label for="general">General</label>
                             </div>
                             <div>
