--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         const logoutOption = document.querySelector('.logout-option');
         selectMenu.addEventListener('click', () => {
             menuOptions.style.display = menuOptions.style.display === 'none' ? 'block' : 'none';
-        });
+});
     </script>
 
     <header>
@@ -100,9 +100,11 @@
             </a>
             <button class="tweet-button" id="btn">Post</button>
         </div>
+        
     </header>
-    
+
     <main>
+        
         <div class="main-flex">
             <div class="main-feed">
                 <div class="new-tweet">
@@ -123,22 +125,23 @@
 
 
                             <div class="topic-options">
-                                <input type="radio" id="music" name="topic" value="Music" required>
+                                <input type="checkbox" id="music" name="topic" value="Music" required>
                                 <label for="music">Music</label>
 
-                                <input type="radio" id="sport" name="topic" value="Sport">
+                                <input type="checkbox" id="sport" name="topic" value="Sport">
                                 <label for="sport">Sport</label>
 
-                                <input type="radio" id="gaming" name="topic" value="Gaming">
+                                <input type="checkbox" id="gaming" name="topic" value="Gaming">
                                 <label for="gaming">Gaming</label>
 
-                                <input type="radio" id="health" name="topic" value="Health">
+                                <input type="checkbox" id="health" name="topic" value="Health">
                                 <label for="health">Health</label>
 
-                                <input type="radio" id="general" name="topic" value="General">
+                                <input type="checkbox" id="general" name="topic" value="General">
                                 <label for="general">General</label>
                             </div>
                             <div>
+                                
                                 <button class="choosed" type="submit">Publish</button>
                             </div>
                         </form>
@@ -160,6 +163,7 @@
                         if (event.target == modal) modal.style.display = "none";
                     };
                 </script>
+                
                 {{range .Posts}}
                 <div class="feed-tweet">
                     <img src="/static/profile.png" alt="" class="tweet-img">
@@ -170,12 +174,14 @@
                                     <span class="tweeter-handle">@{{.Username}} .{{.Creation}}</span>
                                 </a>
                             </div>
+
                             <div class="tweet-actions">
                                 <i class="material-icons-outlined" id="horiz">more_horiz</i>
                             </div>
                         </div>
+                        
                         <div class="tweet-text">
-                            <p>{{.Content}}</p>
+                            <p> {{.Content}}</p>
                         </div>
                         <div class="tweet-icons">
                             <div class="reaction">
@@ -204,6 +210,7 @@
                     </div>
                 </div>
                 {{end}}
+
             </div>
             <script>
                 const formElements = document.querySelectorAll('.form');
