--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
 
 
                             <div class="topic-options">
-                                <input type="checkbox" id="music" name="topic" value="Music" required>
+                                <input type="checkbox" id="music" name="topic" value="Music">
                                 <label for="music">Music</label>
 
                                 <input type="checkbox" id="sport" name="topic" value="Sport">
